# py_VSB_Discord_Moderation_BOT

./: .env.example  .gitignore  CONTRIBUTION.md  DB_SETUP.md  Dockerfile  Dockerfile.dev  LICENSE.md  Makefile  README.md  SECURITY.md  TECHNICAL_GUIDE.md  __init__.py  alembic.ini  docker-compose.dev.yml  docker-compose.production.yml  docker-compose.yml  events.py  pyproject.toml  requirements-dev.txt  requirements.txt  service.py  setup_server.sh  startup.py
.github/workflows/: 00-pre-commit.yml  01-ruff-lint.yml  02-format-check.yml  03-mypy.yml  04-docker-build.yml  05-tests-uv.yml  deploy.yml  docker-build.yml  python-app.yml
bot/: Dockerfile  MANIFEST.in  __init__.py  app.py  main.py  pyproject.toml  run.sh
bot/cogs/: admin.py  ai.py  auth_management_cog.py  casino_cog.py  economy_cog.py  gambling_cog.py  hall_of_fame_cog.py  hall_of_shame_cog.py  health_cog.py  help_center_cog.py  shop_cog.py  verification.py  welcome_cog.py
bot/config/: moderation.json
bot/database/: 00-init-db.sql  data_migration_service.py  database_service.py  schema.sql
bot/database/migrations/: env.py
bot/database/models/: __init__.py  cas_attributes_history.py  discord_profile.py  discord_user_stats.py  economy.py  hof.py  kb.py  poll.py  shame.py  sqlalchemy_models.py  user.py  verification_audit.py
bot/database/queries/: __init__.py  cas_attributes_history_queries.py  discord_profile_queries.py  discord_stats_queries.py  economy_queries.py  hof_queries.py  kb_queries.py  poll_queries.py  shame_queries.py  shop_queries.py  user_queries.py  verification_audit_queries.py
bot/services/: __init__.py  ai_service.py  auth_service.py  health_service.py  kb_service.py  logging_service.py  message_render_service.py  onboarding_service.py  service_loader.py  smart_moderation_service.py  tenor_service.py
bot/utils/: __init__.py  ai_helper.py  config.py  i18n.py  logging_config.py  webserver.py
bot/vsb_bot/: configuration.json  configuration.py  events.py  service.py  startup.py
bot/vsb_bot/services/: audit_service.py  configuration_service.py  hall_of_fame_service.py  hall_of_shame_service.py  logger_service.py  meme_antitext_service.py  reaction_service.py  remind_me_service.py  slowmode_service.py  temporary_voice_service.py  text_formatter_service.py  user_management_admin_service.py  user_management_self_service.py  welcome_service.py
bot/vsb_bot/utils/: instance_dump.py  logger.py  tenor_api_gif.py
scripts/: check_database.py  create_initial_migration.py  dev_run.py  import_dump.py  setup_with_data.py  test_db_connection.py
services/: audit_service.py  configuration_service.py  hall_of_fame_service.py  hall_of_shame_service.py  logger_service.py  meme_antitext_service.py  reaction_service.py  remind_me_service.py  slowmode_service.py  temporary_voice_service.py  text_formatter_service.py  user_management_admin_service.py  user_management_self_service.py  welcome_service.py
utils/: logger.py  tenor_api_gif.py
