[project]
name = "vsb-bot"
version = "0.0.1"
dependencies = [
    "discord.py==2.5.2",
    "requests==2.32.4",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["*.tests", "*.tests.*", "tests.*", "tests"]

[tool.setuptools]
include-package-data = true
